# LiteHttpd.SerialLabelPrinter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LiteHttpdDevConfig.cmake.in  README.md
.github/workflows/: build-artifacts.yml  swagger-gh-pages.yml  upload-release.yml
include/: LiteHttpdDev.h  RequestParams.h  Utils.h
openapi/: label-api.yml
sdk/: .gitignore  LICENSE
sdk/include/: LiteHttpdDev.h  Macros.h  ModuleBase.h  RequestParams.h
sdk/source/: ModuleBase.cpp  RequestParams.cpp
source/: Defines.h  Device.cpp  Device.h  Pages.cpp  Pages.h  RequestParams.cpp  SerialLabelPrinterModule.cpp  SerialLabelPrinterModule.h  Utils.cpp
